<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#C0C0C0">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonañadircuenta"
            android:id="@+id/botonañadircuenta"
            android:layout_gravity="center_horizontal"
            android:textColor="#C0C0C0"
            android:background="#003366"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonmodificarcuenta"
            android:id="@+id/botonmodificarcuenta"
            android:layout_gravity="center_horizontal"
            android:textColor="#C0C0C0"
            android:background="#003366"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/botoneliminarcuenta"
            android:id="@+id/botoneliminarcuenta"
            android:layout_gravity="center_horizontal"
            android:textColor="#C0C0C0"
            android:background="#003366"
            android:layout_marginTop="10dp" />

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/listacuentas"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</RelativeLayout>
